# LMS-with-qml

lms_with_qml/: addbook.qml  adduser.qml  issuebook.qml  lms_with_qml.pro  login.cpp  login.h  logindata.cpp  logindata.h  loginscreen.qml  main.cpp  main.qml  mainmenu.qml  qml.qrc  returnbook.qml  sdadx.cpp  sdadx.h  signup.qml  viewbook.qml  viewstudent.qml
vehicle/: CMakeLists.txt  Menupage.qml  Meter.qml  Startpage.qml  main.cpp  main.qml  qml.qrc
vehicle/VehicleDataSender/: CMakeLists.txt  VehicleLibrary.cpp  VehicleLibrary.h
